Fix text vertical alignment in Loan Actions on small screens
Fix #23
Fix #48

--- a/resources/app/src/assets/scss/components/_loanactions.scss
+++ b/resources/app/src/assets/scss/components/_loanactions.scss
@@ -48,7 +48,7 @@
     }
 
     line-height: 43px;
-    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 
     h2 {
@@ -64,6 +64,8 @@
 
     span {
       font-size: 13px;
+      text-align: right;
+      flex-grow: 1;
     }
   }
 }
